--- a/templates/index.html
+++ b/templates/index.html
@@ -5,28 +5,37 @@
 
 {% for post in posts %}
 <div class="row">
-  <div class="col s12 m6 l4 offset-l2 center-align">
+  <div class="col s12 m6 l3 offset-l2 center-align">
     {% if post.photo %}
-    <img class="hide-on-small-only" src="{{ post.photo }}" alt="" width="90%" style="margin-top:2%;">
+    <img class="hide-on-small-only" src="{{ post.photo }}" alt="" width="100%" style="margin-top:2%;">
     <img class="hide-on-med-and-up" src="{{ post.photo }}" alt="" width="100%">
     {% endif %}
   </div>
 
-  <div class="col s12 m6 l4">
+  <div class="col s12 m6 l5">
     <div class="card z-depth-0 grey lighten-4">
     <div class="card-content">
     {% if post.title %}
     <h4 class="post-title">{{ post.title|safe }}</h4>
     {% endif %}
-    <p class="grey-text post-date">{{ post.display_date }}</p>
+
     <p class="post-body">{{ post.content|safe }}</p>
     {% if post.tags %}
     <br>
-    <p class="right-align">
-    {% for tag in post.tags %}
-    <a href="{{ url_for('tagged_posts', tag=tag) }}" class="grey-text">#{{tag}}</a>
-    {% endfor %}
-    </p>
+    <div class="row date_tag_row">
+      <div class="col s4">
+        <p class="grey-text post-date">{{ post.display_date }}</p>
+      </div>
+      <div class="col s8">
+        <p class="right-align">
+        {% for tag in post.tags %}
+        <a href="{{ url_for('tagged_posts', tag=tag) }}" class="grey-text">#{{tag}}</a>
+        {% endfor %}
+        </p>
+      </div>
+    </div>
+
+
     {% endif %}
     </div>
     </div>
