minor cosmetic changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,13 +17,13 @@
       <br>
       <p>I am biased. I do my best to account for bias in my thoughts and writings, but welcome any observation of their presence. However, I acknowledge and tend to disregard what I call benign bias  -- these are biases that I believe are minimally harmful in that they are biased against an entrenched, powerful entity (preference for Anglo announcers vs. American, e.g.) or between socio-politically irrelevant entities (e.g. preference for Arsenal vs. Tottenham).
       </p>
-      <br>
-      <h5>#ffg // For Future Generations</h5>
-      <p>The purpose of these posts, tagged  <a href="{{ url_for('tagged_posts', tag='ffg') }}">#ffg</a>, is to record my perspective on modern and near-modern players for reference to future generations. You see, I'm a lucky dude: in addition to my father, I have a brilliant, observant uncle. I have had two lodes of knowledge to mine when in search of historical perspective in baseball, basketball, football and even hockey.
-      </p>
-      <br>
-      <p>When I check an athlete's wikipedia page, I'm always hopeful there will be a "Style of Play" section or equivalent. These little bits of knowledge are so evocative for understanding how an athlete fit into his team, his league, his era.  Too often these are lost to the past or, more likely, buried deep in old magazine articles and the skulls of old-timers.
-      </p>
+{#      <br>#}
+{#      <h5>#ffg // For Future Generations</h5>#}
+{#      <p>The purpose of these posts, tagged  <a href="{{ url_for('tagged_posts', tag='ffg') }}">#ffg</a>, is to record my perspective on modern and near-modern players for reference to future generations. You see, I'm a lucky dude: in addition to my father, I have a brilliant, observant uncle. I have had two lodes of knowledge to mine when in search of historical perspective in baseball, basketball, football and even hockey.#}
+{#      </p>#}
+{#      <br>#}
+{#      <p>When I check an athlete's wikipedia page, I'm always hopeful there will be a "Style of Play" section or equivalent. These little bits of knowledge are so evocative for understanding how an athlete fit into his team, his league, his era.  Too often these are lost to the past or, more likely, buried deep in old magazine articles and the skulls of old-timers.#}
+{#      </p>#}
     </div>
     </div>
   </div>
